# KingdomRushDoveUpdater

./: .gitignore  Cargo.toml  Makefile  README.md  check.sh  current_version_commit_hash.txt  origin_version_commit_hash.txt  run.bat  test.sh
src/: main.rs
