[package]
name = "KingdomRushDoveUpdater"
version = "0.1.0"
edition = "2024"

[dependencies]
# 只启用 lua54
mlua = { version = "0.8.6", features = ["lua54", "vendored"] }
rayon = "1.11.0"
regex = "1.12.2"
# need blocking feature for simplicity
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
scraper = "0.24.0"
serde_json = "1.0.145"
