[package]
name = "KingdomRushDoveUpdater"
version = "0.1.0"
edition = "2024"

[dependencies]
# 只启用 lua54
mlua = { version = "0.8.3", features = ["lua54", "vendored"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
scraper = "0.13"
serde_json = "1.0.85"
rayon = "1.5"
regex = "1.5"
time = "0.2"
windows-sys = { version = "0.52", features = ["Win32_System_LibraryLoader"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
